fixed initial page load darkmode flicker on chromium browsers in styles.css; the problem with chromium browsers is that that transition property in html css fires on initial page load . without it there is no issue, but then darkmode subsequent toggling won't benefit from the transition ... the s9lution is to include body as a child selectee of 'html.dark-mode' ... this seems like a weird artifact of different browsers

--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -71,10 +71,16 @@
 html {
 	background: var(--light);
 	color: var(--dark);
-	transition: background-color 0.3s;
+	transition: background-color 0.5s ease-out;
 }
 
 html.dark-mode {
+	background: var(--dark);
+	color: var(--light);
+}
+
+/* on chromium browsers the existence of 'transition' in html class above results in an initial page load darkmode flicker; this hack fixes it (note: previously setting darkmode logic on body instead of html resulted in flicker on non-chromium browsers ... ) */
+html.dark-mode body {
 	background: var(--dark);
 	color: var(--light);
 }
